# SubSor-On-chain-Subscription-Revenue-Split

./: Cargo.toml  README.md
src/: lib.rs  test.rs
